First commit for the new providers page

--- a/src/ClassCentral/SiteBundle/Resources/views/base.html.twig
+++ b/src/ClassCentral/SiteBundle/Resources/views/base.html.twig
@@ -170,6 +170,8 @@
         '@ClassCentralSiteBundle/Resources/public/slashpixel/js/jquery.autosize.js'
         '@ClassCentralSiteBundle/Resources/public/slashpixel/js/jquery.pnotify.js'
         '@ClassCentralSiteBundle/Resources/public/slashpixel/js/enquire.js'
+        '@ClassCentralSiteBundle/Resources/public/slashpixel/js/highcharts.js'
+        '@ClassCentralSiteBundle/Resources/public/slashpixel/js/exporting.js'
         '@ClassCentralSiteBundle/Resources/public/slashpixel/js/classcentral.js'
         '@ClassCentralSiteBundle/Resources/public/slashpixel/bootstrapFormHelpers/js/bootstrap-formhelpers.js'
         %}
