--- a/src/ClassCentral/SiteBundle/Resources/views/Helpers/navbar.html.twig
+++ b/src/ClassCentral/SiteBundle/Resources/views/Helpers/navbar.html.twig
@@ -67,15 +67,8 @@
                     </ul>
                 </li>
 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle nav-title" title="Browser MOOCs by Initiatives" data-toggle="dropdown">Providers<b class="caret"></b></a>
-                    <ul class="dropdown-menu">  
-                    {% for initiative, code in initiativeTypes %}                            
-                        <li>
-                            <a href="{{ path('ClassCentralSiteBundle_initiative',{'type' : initiative})}}" title="List of {{ initiativeCount[code]['name'] }} MOOCs" onClick="_gaq.push(['_trackEvent', '{{ navEventName }}', 'Initiative', '{{initiative}}'])">{{initiativeCount[code]['name'] }} ({{ initiativeCount[code]['count'] }})</a>
-                        </li>
-                    {% endfor %}                            
-                    </ul>
+                <li>
+                    <a href="{{ path('providers') }}" class="nav-title" title="Browser MOOCs by Providers" onmousedown="_gaq.push(['_trackEvent', '{{ navEventName }}', 'Initiative'])">Providers</a>
                 </li>
 
                 {# Subjects #}
