--- a/src/ClassCentral/SiteBundle/Resources/public/slashpixel/css/classcentral.css
+++ b/src/ClassCentral/SiteBundle/Resources/public/slashpixel/css/classcentral.css
@@ -276,6 +276,284 @@ textarea.input-group-sm > .input-group-btn > .btn {
     display: none;
 }
 
+
+/*==================================
+=            =Providers            =
+==================================*/
+
+.providers-wrap h1 {
+    margin-bottom: 25px;
+}
+
+.providers-top-area {
+    margin-bottom: 30px;
+    overflow: hidden;
+}
+
+.providers-box {
+    float: left;
+    width: 682px;
+    border: 1px solid #dcdcdd;
+    background: #fff;
+    min-height: 322px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.providers-box-content {
+    padding: 0 20px;
+}
+
+.providers-box-controls {
+    height: 55px;
+    background: #eaeaea;
+    position: relative;
+    text-align: center;
+}
+
+.provider-control {
+    display: block;
+    position: absolute;
+    background: #c7c7c7;
+    margin-top: -11px;
+    top: 50%;
+    left: 20px;
+    width: 22px;
+    height: 22px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.provider-control-right {
+    right: 20px;
+    left: auto;
+}
+.provider-control:before {
+    display: block;
+    content: "";
+    width: 0;
+    height: 0;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+}
+
+.provider-control-left:before {
+    border-right: 6px solid #fff;
+    margin: 5px 7px;
+}
+
+.provider-control-right:before {
+    border-left: 6px solid #fff;
+    margin: 5px 9px;
+}
+
+.providers-box-controls .view-all {
+    display: inline-block;
+    font-size: 14px;
+    color: #0662a1;
+    line-height: 20px;
+    padding: 18px 0;
+}
+
+.providers-box-row {
+    padding: 20px 0;
+    background: #fff;
+    height: 93px;
+    overflow: hidden;
+}
+
+.providers-box-row:first-child {
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.provider-container {
+    float: left;
+    width: 50%;
+    color: #5d5d5d;
+    font-weight: 400;
+}
+
+.provider-container h3 {
+    font-size: 25px;
+    font-weight: 400;
+    margin-bottom: 4px;
+    line-height: 1;
+    margin-top: 10px;
+}
+
+.provider-container p {
+    font-size: 18px;
+    margin-bottom: 7px;
+}
+
+.provider-container .course-count {
+    font-weight: 600;
+}
+
+.provider-container a {
+    font-size: 14px;
+    color: #0662a1;
+}
+
+.provider-container img {
+    width: 92px;
+    height: 92px;
+    border: 1px solid #e5e5e5;
+    float: left;
+    margin-right: 20px;
+}
+
+.provider-data {
+    float: left;
+}
+
+#providerPieChart {
+    float: left;
+    border: 1px solid #dcdcdd;
+    border-left: none;
+    min-height: 322px;
+    background: #fff;
+}
+
+.search-providers-wrap {
+    overflow: hidden;
+    padding: 30px 0;
+}
+
+.search-providers-wrap .filter-search-wrap {
+    display: block;
+    float: left;
+    border: 1px solid #d4d4d4;
+    height: auto;
+    margin: 0;
+}
+
+.search-providers-wrap .filter-search {
+    border: none;
+    height: 100%;
+    background: #fff;
+    height: 45px;
+    width: 45px;
+}
+
+.search-providers-wrap .filter-search-icon {
+    height: 45px;
+}
+
+.search-providers-wrap .filter-search {
+    padding: 10px 20px;
+    border: none;
+    height: 45px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 350px;
+    font-size: 16px;
+}
+
+.search-providers-wrap ::-webkit-input-placeholder {
+    font-family: 'Open Sans';
+    color:  #898989;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.search-providers-wrap :-moz-placeholder { /* Firefox 18- */
+    font-family: 'Open Sans';
+    color:  #898989;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.search-providers-wrap ::-moz-placeholder {  /* Firefox 19+ */
+    font-family: 'Open Sans';
+    color:  #898989;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 16px;;
+}
+
+.search-providers-wrap :-ms-input-placeholder {
+    font-family: 'Open Sans';
+    color:  #898989;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.search-providers-wrap p {
+    font-size: 24px;
+    font-weight: 600;
+    color: #5d5d5d;
+    margin-right: 12px;
+    float: left;
+    margin-top: 12px;
+}
+.provider-columns {
+    margin: 5px 0 30px 0;
+    overflow: hidden;
+}
+
+.provider-column {
+    width: 33.33%;
+    float: left;
+}
+
+.provider-column p {
+    display: block;
+    padding: 25px 0;
+    margin: 0;
+    font-size: 18px;
+    font-weight: 600;
+    color: #5d5d5d;
+}
+
+.provider-column .provider-course-count {
+    color: #0662a1;
+}
+
+@media (max-width: 1199px) {
+    .providers-box {
+        width: 452px;
+    }
+
+    .provider-container h3 {
+        font-size: 16px;
+    }
+
+    .provider-container p {
+        font-size: 14px;
+    }
+
+    .provider-container img {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+@media (max-width: 1023px) {
+    .provider-column {
+        width: 50%;
+    }
+}
+
+@media (max-width: 640px) {
+    .provider-column p {
+        font-size: 16px;
+        padding: 10px 0;
+    }
+}
+
+@media (max-width: 520px) {
+    .provider-column {
+        width: 100%;
+    }
+}
+
 /*==========  tiles styles  ==========*/
 
 .tiles-view {
