Ported over changes for classbot from the dev site

--- a/src/ClassCentral/SiteBundle/Resources/views/Helpers/navbar.html.twig
+++ b/src/ClassCentral/SiteBundle/Resources/views/Helpers/navbar.html.twig
@@ -20,6 +20,17 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
+                <li class="classbot-toggle-wrap">
+                    <a href="#" class="classbot-toggle" data-toggle="modal" data-target="#classbot">
+                        <span class="classbot-toggle__search-text">Search</span>
+                        <svg viewBox="0 0 33 32" class="icon-search classbot-toggle__search-icon">
+                            <use xlink:href="#icon-cc-logo2"></use>
+                        </svg>
+                        <div class="cc-tooltip cc-tooltip-bottom classbot-toggle-wrap__tooltip">
+                            Did you know? You can press Ctrl+L to open Classbot
+                        </div>
+                    </a>
+                </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle nav-title" title="Browse MOOCs by their Start date" data-toggle="dropdown">
                         Courses
