--- a/src/ClassCentral/SiteBundle/Resources/public/slashpixel/less/_components.less
+++ b/src/ClassCentral/SiteBundle/Resources/public/slashpixel/less/_components.less
@@ -13,7 +13,7 @@
     =small-link
     =color-schemes
     =form
-   =MISC components
+  =MISC components
     =line-with-points
     =large-thin-title
     =expand-preview
@@ -27,6 +27,8 @@
     =crop-circle
     =html5-videos
     =ratings in the table
+    =cc-tooltip
+  =Classbot
 */
 
 /* ==========================================================================
@@ -743,7 +745,7 @@ a:focus .card-back__interaction-text {
   position: relative;
   min-width: 14px;
   padding: 1px 3px;
-  font-size: 10px !important;
+  font-size: 8px !important;
   font-weight: 400 !important;
   background-color: @gray-dark !important;
   color: #fff !important;
@@ -766,3 +768,305 @@ a:focus .card-back__interaction-text {
   display: block;
   width: 0;
 }
+
+
+/* =cc-tooltip
+----------------------------------------------------------------------------- */
+
+
+
+.cc-tooltip {
+  position: relative;
+  display: block;
+  background-color: @tooltip-bg;
+  color: @tooltip-text;
+  padding: 10px 15px;
+  font-size: 15px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
+
+.cc-tooltip-bottom:before {
+  content: "";
+  display: block;
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  margin-left: -7px;
+  top: -7px;
+  left: 50%;
+  background-color: @tooltip-bg;
+  transform: rotate(45deg);
+  -webkit-box-shadow: -2px -2px 4px 0px rgba(0,0,0,0.35);
+  -moz-box-shadow: -2px -2px 4px 0px rgba(0,0,0,0.35);
+  box-shadow: -2px -2px 4px 0px rgba(0,0,0,0.35);
+}
+
+/* ==========================================================================
+   =Classbot
+   ========================================================================== */
+
+.classbot-toggle-wrap {
+  display: none;
+}
+
+.no-touch .navbar-nav .search-form {
+  display: none;
+}
+
+.no-touch .classbot-toggle-wrap {
+  display: block;
+}
+
+.classbot-open .modal-backdrop.in {
+  opacity: 0.3;
+}
+
+.classbot-modal .modal-dialog {
+  margin-top: 140px;
+}
+
+@media (min-width: @screen-sm) {
+  .classbot-modal .modal-dialog {
+    width: 630px;
+  }
+}
+
+.classbot-modal .modal-content {
+  border: 10px solid rgba(6, 98, 161, 0.85);
+  border-radius: 7px;
+  -webkit-box-shadow: 0 5px 30px rgba(0,0,0,0.7);
+  box-shadow: 0 5px 30px rgba(0,0,0,0.7);
+}
+
+.classbot-modal .modal-body {
+  padding: 0;
+}
+
+.classbot-modal .modal-header {
+  padding: 0;
+}
+
+.classbot-search-box {
+  width: 100%;
+  display: block;
+  font-size: 34px;
+  color: @gray-dark;
+  font-weight: 400;
+  border: 0;
+  padding: 12px 20px;
+}
+
+.classbot-search-box::-ms-clear {
+  display: none;
+}
+
+
+.classbot-search-box:focus {
+  outline: none;
+}
+
+.classbot-search-box.tt-hint:focus {
+  outline: none;
+  border: none;
+}
+
+#classbot-search-container .twitter-typeahead {
+  display: block !important;
+}
+
+#classbot-search-container .tt-dropdown-menu {
+  position: relative !important;
+  background-color: transparent;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+#classbot-search-container .tt-dropdown-menu.js-no-custom-scrollbar {
+  max-height: 200px;
+}
+
+@media (min-height: 600px) {
+  #classbot-search-container .tt-dropdown-menu.js-no-custom-scrollbar {
+    max-height: 350px;
+  }
+}
+
+@media (min-height: 700px) {
+  #classbot-search-container .tt-dropdown-menu.js-no-custom-scrollbar {
+    max-height: 450px;
+  }
+}
+
+@media (min-height: 800px) {
+  #classbot-search-container .tt-dropdown-menu.js-no-custom-scrollbar {
+    max-height: 580px;
+  }
+}
+
+@media (min-height: 900px) {
+  #classbot-search-container .tt-dropdown-menu.js-no-custom-scrollbar {
+    max-height: 680px;
+  }
+}
+
+@media (min-height: 1000px) {
+  #classbot-search-container .tt-dropdown-menu.js-no-custom-scrollbar {
+    max-height: 780px;
+  }
+}
+
+
+@media (min-height: 1100px) {
+  #classbot-search-container .tt-dropdown-menu.js-no-custom-scrollbar {
+    max-height: 880px;
+  }
+}
+
+#classbot-search-container .tt-dropdown-menu .tt-suggestion {
+  background-color: transparent;
+  padding: 0;
+  border-top: 1px solid #f7f7f7;
+}
+
+#classbot-search-container .tt-dropdown-menu .tt-suggestion a {
+  padding: 12px 20px;
+  display: block;
+  &:hover,
+  &:focus {
+    background-color: #f1f1f1;
+    text-decoration: none;
+  }
+}
+
+#classbot-search-container .tt-dropdown-menu .tt-cursor a {
+  background-color: #f1f1f1;
+  text-decoration: none;
+}
+
+#classbot-search-container .tt-dropdown-menu .tt-cursor a .name,
+#classbot-search-container .tt-dropdown-menu .tt-suggestion a:hover .name,
+#classbot-search-container .tt-dropdown-menu .tt-suggestion a:focus .name {
+  text-decoration: none;
+  color: @gray-dark;
+}
+
+#classbot-search-container .tt-dropdown-menu .tt-suggestion .name {
+  font-size: 22px;
+  font-weight: 300;
+}
+
+#classbot-search-container .tt-dropdown-menu .tt-suggestion .session-wrap {
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.classbot-search-box::-webkit-input-placeholder {
+  color: rgba(30, 96, 141, 0.15);
+  font-style: italic;
+}
+
+.classbot-search-box:-moz-placeholder { /* Firefox 18- */
+  color: rgba(30, 96, 141, 0.15);
+  font-style: italic;
+}
+
+.classbot-search-box::-moz-placeholder {  /* Firefox 19+ */
+  color: rgba(30, 96, 141, 0.15);
+  font-style: italic;
+}
+
+.classbot-search-box:-ms-input-placeholder {
+  color: rgba(30, 96, 141, 0.15);
+  font-style: italic;
+}
+
+#classbot-search-container  .tt-suggestion .suggestions-footer {
+  font-size: 20px;
+}
+
+
+.classbot-modal-header {
+  position: relative;
+}
+
+.classbot-modal-header__cc-logo-wrap {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: -31px;
+  margin-left: -30px;
+  left: 50%;
+  background: #fff;
+  border-radius: 50%;
+}
+
+.classbot-modal-header__cc-logo {
+  display: block;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  z-index: 1000;
+  top: 48%;
+  left: 50%;
+  margin-left: -20px;
+  margin-top: -20px;
+}
+
+.classbot-toggle {
+  .clearfix;
+}
+
+.classbot-toggle .classbot-toggle__search-icon {
+  margin: 2px 16px 0 0;
+}
+
+@media (min-width: @grid-float-breakpoint) {
+  .classbot-toggle .classbot-toggle__search-icon {
+    margin: 2px 16px 0 23px;
+  }
+}
+
+
+.classbot-toggle:hover .classbot-toggle__search-icon,
+.classbot-toggle:focus .classbot-toggle__search-icon {
+  fill: @navbar-default-link-hover-color;
+}
+
+.classbot-toggle__search-text {
+  display: none;
+}
+
+.classbot-toggle-wrap__tooltip {
+  opacity: 0;
+  position: absolute;
+  top: 69px;
+  width: 142px;
+  margin-left: -66px;
+  left: 50%;
+  transition: 0.5s;
+}
+
+@media (min-width: @grid-float-breakpoint) {
+  .classbot-toggle:hover .classbot-toggle-wrap__tooltip {
+    opacity: 1;
+  }
+}
+
+// tinyscrollbar
+
+/* Tiny Scrollbar */
+
+#classbot-search-container .tt-dropdown-menu.js-custom-scrollbar {
+  overflow: hidden;
+}
+
+#classbot-search-container .tt-dropdown-menu .viewport { overflow: hidden; position: relative; }
+#classbot-search-container .tt-dropdown-menu .overview { list-style: none; position: absolute; left: 0; top: 0;}
+#classbot-search-container .tt-dropdown-menu .scrollbar{ background: transparent url(images/bg-scrollbar-track-y.png) no-repeat 0 0; position: relative; background-position: 0 0; float: right; width: 15px; }
+#classbot-search-container .tt-dropdown-menu .track { background: transparent url(images/bg-scrollbar-trackend-y.png) no-repeat 0 100%; height: 100%; width:13px; position: relative; padding: 0 1px; }
+#classbot-search-container .tt-dropdown-menu .thumb { background: transparent url(images/bg-scrollbar-thumb-y.png) no-repeat 50% 100%; height: 20px; width: 25px; cursor: pointer; overflow: hidden; position: absolute; top: 0; left: -5px; }
+#classbot-search-container .tt-dropdown-menu .thumb .end { background: transparent url(images/bg-scrollbar-thumb-y.png) no-repeat 50% 0; overflow: hidden; height: 5px; width: 25px; }
+#classbot-search-container .tt-dropdown-menu .disable { display: none; }
+.noSelect { user-select: none; -o-user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; }
