--- a/src/ClassCentral/SiteBundle/Resources/public/slashpixel/less/custom_variables.less
+++ b/src/ClassCentral/SiteBundle/Resources/public/slashpixel/less/custom_variables.less
@@ -567,13 +567,15 @@
 //** Tooltip text color
 @tooltip-color:               #fff;
 //** Tooltip background color
-@tooltip-bg:                  #000;
+@tooltip-bg:                  #fff;
 @tooltip-opacity:             .9;
 
 //** Tooltip arrow width
 @tooltip-arrow-width:         5px;
 //** Tooltip arrow color
 @tooltip-arrow-color:         @tooltip-bg;
+
+@tooltip-text:                #282828;
 
 
 //== Popovers
