--- a/src/ClassCentral/SiteBundle/Resources/views/base.html.twig
+++ b/src/ClassCentral/SiteBundle/Resources/views/base.html.twig
@@ -97,6 +97,7 @@
 <body>
 
 {% include 'ClassCentralSiteBundle:Helpers:sprites.svg.twig' %}
+{% include 'ClassCentralSiteBundle:Helpers:search_modal.html.twig' %}
 {% if page is defined %}
     {% render controller('ClassCentralSiteBundle:Navigation:index', {'page': page}) %}
 {% else %}
@@ -217,6 +218,7 @@
 '@ClassCentralSiteBundle/Resources/public/slashpixel/js/jquery.iframe-transport.js'
 '@ClassCentralSiteBundle/Resources/public/slashpixel/js/jquery.fileupload.js'
 '@ClassCentralSiteBundle/Resources/public/slashpixel/js/jquery.Jcrop.min.js'
+'@ClassCentralSiteBundle/Resources/public/slashpixel/js/jquery.tinyscrollbar.min.js'
 '@ClassCentralSiteBundle/Resources/public/slashpixel/js/cc.utilities.js'
 '@ClassCentralSiteBundle/Resources/public/slashpixel/js/cc.user.js'
 '@ClassCentralSiteBundle/Resources/public/slashpixel/js/cc.profile.js'
